--- a/css/styles.css
+++ b/css/styles.css
@@ -111,3 +111,13 @@ p {
     width: 15%;
     margin: 20px 20px 50px;
 }
+
+/* pricing section */
+#pricing {
+    padding: 100px;
+}
+
+.pricing-col {
+    padding: 3% 2%;
+    text-align: center;
+}
